add name of service to main page

--- a/src/main/resources/templates/login-registration.html
+++ b/src/main/resources/templates/login-registration.html
@@ -5,6 +5,8 @@
     <title>login-registration</title>
 </head>
 <body>
+    <h1>Airline Reservation System</h1>
+    <hr>
     <h1>Create new user</h1>
     <form action="/new-user" method="post">
         <label for="name">Input name:</label>
